# local-db

./: .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBUDDY.md  PRD.md  README.md  build.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.claude/commands/openspec/: apply.md  archive.md  proposal.md
.codebuddy/commands/openspec/: apply.md  archive.md  proposal.md
.github/workflows/: build.yml
.opencode/command/: openspec-apply.md  openspec-proposal.md
docs/: linux.md  macos.md  windows.md
openspec/: project.md
openspec/changes/add-auto-changelog/: design.md  proposal.md  tasks.md
openspec/changes/add-auto-changelog/specs/build-automation/: spec.md
scripts/: build.js  changelog.js  generate-changelog.cjs
src/: App.tsx  app.tsx  index.css  index.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  command.rs  lib.rs  main.rs
src-tauri/src/command/: database.rs  mod.rs  settings.rs  system_info.rs
src-tauri/src/core/: db_manager.rs  linux.rs  macos.rs  mod.rs  types.rs  utils.rs  windows.rs
src-tauri/tests/: test_macos.rs
src/command/: database.ts  index.ts  settings.ts  system_info.ts
src/components/: Dashboard.tsx  Header.tsx  InstancesView.tsx  ResourceLogs.tsx  Sidebar.tsx  dashboard.tsx  instances-view.tsx  resource-logs.tsx  settings.tsx  sidebar.tsx
src/hooks/: use-updater.ts
